--- a/ClassWork13_BegiK/ClassWork13_BegiK/Base.lproj/Main.storyboard
+++ b/ClassWork13_BegiK/ClassWork13_BegiK/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                 <rect key="frame" x="30" y="427" width="333" height="40"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="e26-1i-Bna">
-                                        <rect key="frame" x="0.0" y="0.0" width="100.66666666666667" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="102" height="40"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="NvS-Xg-h8F">
                                                 <rect key="frame" x="0.0" y="1.6666666666666643" width="32" height="36.000000000000007"/>
@@ -59,24 +59,32 @@
                                                 </constraints>
                                                 <imageReference key="image" image="star.fill" catalog="system" symbolScale="small"/>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.8" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBv-di-gS0">
-                                                <rect key="frame" x="36" y="0.0" width="24.666666666666671" height="40"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="4.8" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBv-di-gS0">
+                                                <rect key="frame" x="36" y="0.0" width="26" height="40"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(230)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wJ-5P-p8y">
-                                                <rect key="frame" x="64.666666666666671" y="0.0" width="36" height="40"/>
+                                                <rect key="frame" x="66" y="0.0" width="36" height="40"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0j5-8F-4vM">
-                                        <rect key="frame" x="308.66666666666669" y="2" width="24.333333333333314" height="37"/>
-                                        <color key="tintColor" systemColor="labelColor"/>
-                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e8J-Fz-u71">
+                                        <rect key="frame" x="310" y="0.0" width="23" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="23" id="Ffd-pP-MLw"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system" title=""/>
+                                        <connections>
+                                            <action selector="heartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YZq-cU-SnH"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -185,6 +193,11 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ntS-7Q-iEK">
+                                <rect key="frame" x="-94" y="-19" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eEv-wM-ZWi"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -219,7 +232,6 @@
                     <connections>
                         <outlet property="bigSizeCoffe" destination="L8P-pF-gUX" id="Bba-Tl-XQe"/>
                         <outlet property="buy" destination="hYS-tL-Bvt" id="P24-GJ-HNL"/>
-                        <outlet property="heart" destination="0j5-8F-4vM" id="0mD-hP-QvM"/>
                         <outlet property="image" destination="RNH-jy-DDM" id="com-8f-dTf"/>
                         <outlet property="littleSizeCoffe" destination="8Hd-kp-K1t" id="nwx-we-NMh"/>
                         <outlet property="middleSizeCoffe" destination="pe5-WG-osk" id="t50-Yg-G7b"/>
@@ -240,11 +252,14 @@
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
